<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/requestCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/general_margin_start"
        app:cardCornerRadius="@dimen/radius_card_view_start_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerRequestConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_header_card_view_start_request"
                android:layout_marginTop="1dp"
                android:background="@color/venice_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/requestNumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_start_request"
                    android:text="SOLICITUD 17"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_de_titulos"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerRequestConstraintLayout">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.7" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/general_margin_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline9"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/dateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/general_margin_start"
                        android:text="18-06-2021"
                        app:layout_constraintBottom_toTopOf="@+id/hourTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/hourTextView"
                        android:layout_width="@dimen/width_text_view_hour_start_request"
                        android:layout_height="@dimen/height_text_view_hour_start_request"
                        android:layout_marginBottom="@dimen/general_margin_start"
                        android:text="12:15 am"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/imageView5"
                    android:layout_width="@dimen/size_icon_circle_blue_confirm_location"
                    android:layout_height="@dimen/size_icon_circle_blue_confirm_location"
                    android:layout_marginStart="@dimen/general_margin_start"
                    android:background="@drawable/circle_blue"
                    app:layout_constraintBottom_toBottomOf="@+id/textView29"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView29">

                    <ImageView
                        android:layout_width="@dimen/size_icon_victim_start_request"
                        android:layout_height="@dimen/size_icon_victim_start_request"
                        android:layout_margin="@dimen/margin_icon_victim_start_request"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_victim_white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="@dimen/width_report_text_view_start_request"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin_start"
                    android:text="@string/reported_dead"
                    android:textColor="@color/venice_blue"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_container_comments_false_alarm"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout12">

            </androidx.fragment.app.FragmentContainerView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin_start"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="@dimen/general_margin_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/address_reported"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/hood_rejected"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView30" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="PUNTO DE REFERENCIA  :"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="VIA 1- CRR. 45 # 78 89"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline10"
                    app:layout_constraintTop_toTopOf="@+id/textView30" />

                <TextView
                    android:id="@+id/neighborhoodTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="LA MERCED"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView31"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/addressTextView"
                    app:layout_constraintTop_toTopOf="@+id/textView31" />

                <TextView
                    android:id="@+id/referenceTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="AL LADO DERECHO DE LA ESQUINA DEL PAGATODO"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/neighborhoodTextView"
                    app:layout_constraintTop_toTopOf="@+id/textView32" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@integer/guideline_center_start_request" />

            <Button
                android:id="@+id/rejectShadowBorderButtonView"
                android:layout_width="@dimen/general_width_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/general_margin_start"
                android:layout_marginBottom="@dimen/margin_top"
                android:text="@string/reject"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout15" />

            <Button
                android:id="@+id/agreeButton"
                android:layout_width="@dimen/general_width_button"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin_start"
                android:layout_marginBottom="@dimen/margin_top"
                android:text="@string/accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toTopOf="@+id/rejectShadowBorderButtonView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>